# kriging-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.cursor/rules/: rust-tdd.mdc
.github/workflows/: ci.yml  publish.yml
bench-results/: README.md
benches/: js_wasm_profile.mjs  performance.rs
docs/: kriging-rs-math.tex
examples/: binomial_kriging.rs  gpu_probe.rs  large_10000.rs  ordinary_kriging.rs
npm/kriging-rs-wasm/: .gitignore  .npmignore  .prettierignore  LICENSE  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.build.json  tsconfig.contracts.json
npm/kriging-rs-wasm/scripts/: assert-uninitialized-throws.mjs  smoke.mjs
npm/kriging-rs-wasm/src/: index.ts  raw-wasm.d.ts
npm/kriging-rs-wasm/tests/: contracts.ts  integration.test.ts
scripts/: release.sh
src/: distance.rs  error.rs  geo_dataset.rs  gpu.rs  lib.rs  matrix.rs  utils.rs  wasm.rs
src/kriging/: binomial.rs  mod.rs  ordinary.rs
src/variogram/: empirical.rs  fitting.rs  mod.rs  models.rs
tests/: integration_tests.rs  regression_simulation.rs  wasm_tests.rs
www/: README.md  index.html  index.js  package-lock.json  package.json  vite.config.js
www/src/: App.jsx  index.css
www/src/components/: CompareView.jsx  DataUpload.jsx  ErrorBanner.jsx  QuickDemos.jsx  SurfaceDemo.jsx
www/src/lib/: canvas.js  sampleData.js  variogram.js
