[package]
name = "kriging-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
argmin = { version = "0.11.0", features = ["wasm-bindgen"] }
argmin-math = { version = "0.5.1", features = ["nalgebra_latest"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
nalgebra = { version = "0.34.1", default-features = false, features = ["std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
serde_json = "1.0.149"
thiserror = "2.0.18"
wasm-bindgen = { version = "0.2.114", optional = true }

[features]
wasm-bindgen = ["dep:wasm-bindgen"]
serde-wasm-bindgen = ["dep:serde-wasm-bindgen"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dev-dependencies]
approx = "0.5.1"
criterion = "0.8.2"
wasm-bindgen-test = "0.3.64"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["wasm-bindgen", "serde-wasm-bindgen", "console_error_panic_hook"]

[profile.release]
opt-level = 3
lto = true

[profile.release-wasm]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
