[package]
name = "kriging-rs"
version = "0.2.2"
edition = "2024"
rust-version = "1.92.0"
license = "MIT"
description = "Geostatistical kriging library with WASM support"
keywords = ["kriging", "geostatistics", "wasm", "interpolation", "spatial"]
categories = ["science", "wasm"]
repository = "https://github.com/m-murphy/kriging-rs"
exclude = [
  ".cursor/",
  ".github/",
  "bench-results/",
  "docs/",
  "npm/",
  "www/",
  "Cargo.toml.orig",
  "benches/js_wasm_profile.mjs",
]
readme = "README.md"

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
nalgebra = { version = "0.34.1", default-features = false, features = ["std"] }
js-sys = { version = "0.3.91", optional = true }
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
thiserror = "2.0.18"
wasm-bindgen = { version = "0.2.114", optional = true }
wgpu = { version = "28.0.0", optional = true }
pollster = { version = "0.4.0", optional = true }
wasm-bindgen-futures = { version = "0.4.64", optional = true }
bytemuck = { version = "1.25.0", features = ["derive"], optional = true }
futures-channel = { version = "0.3.32", optional = true }
puruspe = "0.4.3"

[features]
default = []
wasm-bindgen = ["dep:wasm-bindgen"]
serde-wasm-bindgen = ["dep:serde-wasm-bindgen"]
console_error_panic_hook = ["dep:console_error_panic_hook"]
wasm = ["wasm-bindgen", "serde-wasm-bindgen", "console_error_panic_hook", "dep:js-sys"]
gpu = [
    "dep:wgpu",
    "dep:wasm-bindgen-futures",
    "dep:bytemuck",
    "dep:futures-channel",
]
gpu-blocking = ["gpu", "dep:pollster"]


[dev-dependencies]
approx = "0.5.1"
rand = "0.10.0"
wasm-bindgen-test = "0.3.64"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.8.2"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = true

[profile.release-wasm]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1

[[bench]]
name = "performance"
harness = false
